src/main/default/objects/Equipment__c/fields/Catalog_Item__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Catalog item for the equipment. You must link an equipment record to a catalog item. Equipment records inherit the catalog description and ticket item record type for their linked catalog item.</inlineHelpText>
    <label>Catalog Item</label>
    <referenceTo>Catalog_Item__c</referenceTo>
    <relationshipLabel>Equipment</relationshipLabel>
    <relationshipName>Equipment</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>