src/main/default/objects/Equipment__c/fields/Catalog_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Item_Description__c</fullName>
    <formula>Catalog_Item__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Catalog description for the catalog item linked to the equipment.</inlineHelpText>
    <label>Catalog Item Description</label>
    <type>Text</type>
</CustomField>