src/main/default/objects/Equipment__c/fields/Decommission_Date__c.field-meta.xml
<CustomField>
    <fullName>Decommission_Date__c</fullName>
    <label>Decommission Date</label>
    <type>Date</type>
</CustomField>