src/main/default/objects/Equipment__c/fields/In_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>In_Service_Date__c</fullName>
    <label>In Service Date</label>
    <type>Date</type>
</CustomField>