src/main/default/objects/Equipment__c/fields/Manufactured_Date__c.field-meta.xml
<CustomField>
    <fullName>Manufactured_Date__c</fullName>
    <label>Manufactured Date</label>
    <type>Date</type>
</CustomField>