src/main/default/objects/Equipment__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Manufacturer of the equipment.</inlineHelpText>
    <label>Manufacturer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Equipment Manufactured</relationshipLabel>
    <relationshipName>Equipment_Manufactured</relationshipName>
    <type>Lookup</type>
</CustomField>