src/main/default/objects/Equipment__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Office that owns the equipment.</inlineHelpText>
    <label>Office</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Equipment (Office)</relationshipLabel>
    <relationshipName>Equipment</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>