src/main/default/objects/Equipment__c/fields/Out_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out of Service</label>
    <type>Checkbox</type>
</CustomField>