src/main/default/objects/Equipment__c/fields/Owner_Company__c.field-meta.xml
<CustomField>
    <fullName>Owner_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What account owns this equipment.  We should by default set this to the user's Account if possible.</description>
    <inlineHelpText>Customer that owns the equipment.</inlineHelpText>
    <label>Owner Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Equipment Owner Company</relationshipLabel>
    <relationshipName>Equipment_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>