src/main/default/objects/Equipment__c/fields/RFID_Tag__c.field-meta.xml
<CustomField>
    <fullName>RFID_Tag__c</fullName>
    <label>RFID Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>