src/main/default/objects/Equipment__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <inlineHelpText>Serial number for the equipment.</inlineHelpText>
    <label>Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>