src/main/default/objects/Equipment__c/fields/Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number__c</fullName>
    <inlineHelpText>Unit number for the equipment.</inlineHelpText>
    <label>Unit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>