src/main/default/objects/Equipment__c/listViews/All_Equipment.listView-meta.xml
<ListView>
    <fullName>All_Equipment</fullName>
    <columns>NAME</columns>
    <columns>Unit_Number__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Catalog_Item_Description__c</columns>
    <columns>Office__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Equipment</label>
    <language>en_US</language>
</ListView>